# oss.FCL.sf.os.kernelhwsrv

./: CMakeLists.txt  dependence  toolchain.cmake
halservices/: CMakeLists.txt
kernel/eka/: configure.py  configure_new.pl
kernel/eka/compsupp/rt_2_2/armv5/lib/: dfprvct2_2.dso  dfprvct2_2{000a0000}.lib  drtrvct2_2.dso  drtrvct2_2.lib
kernel/eka/compsupp/rt_2_2/armv5/udeb/: dfprvct2_2.dll.map  dfprvct2_2.dll.sym  dfprvct2_2_vfpv2.dll.map  dfprvct2_2_vfpv2.dll.sym  drtrvct2_2.dll.map  drtrvct2_2.dll.sym  drtrvct2_2_vfpv2.dll.map  drtrvct2_2_vfpv2.dll.sym  ksrt2_2.lib  usrt2_2.lib  usrt_nx_2_2.lib
kernel/eka/compsupp/rt_2_2/armv5/urel/: dfprvct2_2.dll.map  dfprvct2_2.dll.sym  dfprvct2_2_vfpv2.dll.map  dfprvct2_2_vfpv2.dll.sym  drtrvct2_2.dll.map  drtrvct2_2.dll.sym  drtrvct2_2_vfpv2.dll.map  drtrvct2_2_vfpv2.dll.sym  ksrt2_2.lib  usrt2_2.lib  usrt_nx_2_2.lib
kernel/eka/compsupp/rt_2_2/armv6/udeb/: dfprvct2_2.dll.map  dfprvct2_2.dll.sym  dfprvct2_2_vfpv2.dll.map  dfprvct2_2_vfpv2.dll.sym  drtrvct2_2.dll.map  drtrvct2_2.dll.sym  drtrvct2_2_vfpv2.dll.map  drtrvct2_2_vfpv2.dll.sym  ksrt2_2.lib  usrt2_2.lib  usrt_nx_2_2.lib
kernel/eka/compsupp/rt_2_2/armv6/urel/: dfprvct2_2.dll.map  dfprvct2_2.dll.sym  dfprvct2_2_vfpv2.dll.map  dfprvct2_2_vfpv2.dll.sym  drtrvct2_2.dll.map  drtrvct2_2.dll.sym  drtrvct2_2_vfpv2.dll.map  drtrvct2_2_vfpv2.dll.sym  ksrt2_2.lib  usrt2_2.lib  usrt_nx_2_2.lib
